complete content updates

--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -80,7 +80,20 @@ open-url:visited
 		}
 	  );
 	});
-  </script>
+</script>
+
+<!-- Preface -->
+<tw-passagedata pid="16" name="Preface" tags="" position="0,43" size="100,100">
+	//Disclaimer: Before reading, please be aware that the story will heavily feature anxieties regarding racism, discrimination, identity, and death. There will be links provided throughout to articles and resources related to our content.//
+
+	Our narrative does not take place on a specified date during the pandemic. Readers will find that referenced statistics and reported events span a months-long time frame encompassing the height of the pandemic in NYC. This was done to holistically communicate a complex reality supported by evidence which is recorded/publicized at a pace not reflective of lived experience. This narrative follows a day in the life of a registered nurse living and working in NYC who identifies as Asian American.
+	
+	While there are moments throughout the plot that are directly hyperlinked to relevant articles and sources, in no way does the body of provided resources in its entirety represent the wealth of information regarding the pandemic and anti-Asian racism fuelled by the pandemic. We recognize that many incidents of discrimination and hate are unreported due to fears of retaliation, gaslighting, and/or law enforcement and media apathy. We hope that what we have gathered here can serve as a foundation for further research and insight into the true scope of the issues we discuss.
+	
+	Moreover, we do not intend to in any capacity speak for all Asian American healthcare workers. Our story focuses on the day-in-the-life of one fictionalized individual experiencing a reality based on facts, reports, as and first-hand testimonials. In this way, the character presented is an amalgamation of many various accounts of the Asian American experience, specifically the East Asian American experience, during this pandemic. We also recognize that the term &quot;Asian American&quot; is vastly broad, and that the impacts of COVID-19 have been disproportionately manifested amongst various subgroups within the monolithic grouping &quot;Asian American.&quot; 
+	
+	[[Let&#39;s Begin-&gt;Intro: Awaken]]
+</tw-passagedata>
 
 <!-- Passage 0 Intro: Awaken-->
 <tw-passagedata pid="1" name="Intro: Awaken" tags="" position="112,211" size="100,100">
@@ -262,6 +275,15 @@ Mask-on (link-repeat: &quot;(the right way, of course):&quot;)[(open-url: &#39;h
 	});
 </script>
 
+</tw-passagedata>
+
+<!-- Passage 3.5 Daily Report Alert-->
+<tw-passagedata pid="23" name="Daily Report Alert" tags="" position="849,212" size="100,100">
+
+	<div class="email">
+	&lt;h1&gt;Subject: Daily COVID-19 Cases, New York City&lt;/h1&gt;
+	&lt;button&gt;[[Open -&gt;3. Daily Report]]&lt;/button&gt;</div>
+	
 </tw-passagedata>
 
 <!-- Passage 5 Walking -->
@@ -477,7 +499,7 @@ This reminds me. I’d heard from a friend about a resident at another NYC hospi
 I hear my stop on the speaker, though it&#39;s more of a mangled buzzing from down the car. [[I bookmark the post for later.-&gt;11. Ritual]] 
 </tw-passagedata>
 
-<!--11. Ritual -->
+<!--11 Ritual -->
 <tw-passagedata pid="13" name="11. Ritual" tags="" position="682,658" size="100,100">Finally, home again. Now begins the nightly ritual. Mask off. 
 
 (text-style: &quot;expand&quot;)[Breathe] 
@@ -491,17 +513,12 @@ Instant noodles. Microwavable rice. Pickled vegetables. Leftover black pepper be
 (text-style: &quot;fade-in-out&quot;)[//[[1 New Message-&gt;12. Group Chat]]//]
 </tw-passagedata>
 
-<tw-passagedata pid="14" name="12. Group Chat" tags="" position="844,658" size="100,100">Oh wow. Someone decided to revive the old college group chat. When was the last time anyone sent a message in there? I guess this is a nice surprise, I haven’t talked to my friends in a while. I haven’t talked to anyone, really, in a while. There’s a strange twist in my stomach–a nervousness in dealing with something that used to be normal, but somehow now is anything but. 
+<!-- 12 Group Chat-->
+<tw-passagedata pid="14" name="12. Group Chat" tags="" position="844,658" size="100,100">Oh wow. Someone decided to revive the old college group chat. When was the last time anyone sent a message in there? I guess this is a nice surprise, I haven’t talked to them in a while. I haven’t talked to many people, really, in a while. There’s a strange twist in my stomach–a nervousness in dealing with something that used to be normal, but somehow now is anything but. 
 
-“Hey guys, long time no talk. I’ve been really missing our college adventures these days, and I thought that it’d be nice to have a socially distanced get-together. Maybe a picnic at Central Park? BYOB (bring your own blanket!)”
+// INSERT IMAGE, DELAY 3 SECONDS AFTER EACH MESSAGE OVERLAY // 
 
-“Yes!!”
-
-“Crazy how it’s been almost a year since we all hung out”
-
-“Can’t wait to catch up with you all!” 
-
-Just seeing their messages brings their voices to life. I feel nostalgic about those college years, which, in reality, were only three years ago. I want to respond with a yes. I want to see my friends. I wish I was ignorant enough to say yes to the invite. Should I?
+Just seeing their messages brings their voices to life. I feel nostalgic about those college years, which, in reality, were only some years ago. I want to respond with a yes. I want to see my friends. Should I?
 
 No.
 
@@ -509,36 +526,62 @@ No I can’t. I can’t for them, for me, for those I’ll be seeing and caring 
 
 So I’ll send a polite decline and maybe a brief explanation, wishing them all well and fun. 
 
-The journey there would be too much, [[anyways.-&gt;13. Reflection]]</tw-passagedata>
+The journey there would be too much, [[anyway.-&gt;13. Reflection]]
+</tw-passagedata>
 
-<!-- Fin.-->
-<tw-passagedata pid="15" name="Fin." tags="" position="681,801" size="100,100">Tomorrow morning you’ll see this text and smile, and I will remember to eat. I will be strong. You’ve eaten. The city sleeps, for now, and now I sleep too. </tw-passagedata><tw-passagedata pid="16" name="Preface" tags="" position="0,43" size="100,100">//Disclaimer: Before reading, please be aware that the story will heavily feature anxieties regarding racism, discrimination, identity, and death. There will be links provided throughout to articles and resources related to our content.//
-
-Our narrative does not take place on a specified date during the pandemic. Readers will find that referenced statistics and reported events span a months-long time frame encompassing the height of the pandemic in NYC. This was done to holistically communicate a complex reality supported by evidence which is recorded/publicized at a pace not reflective of lived experience. This narrative follows a day in the life of a registered nurse living and working in NYC who identifies as Asian American.
-
-While there are moments throughout the plot that are directly hyperlinked to relevant articles and sources, in no way does the body of provided resources in its entirety represent the wealth of information regarding the pandemic and anti-Asian racism fuelled by the pandemic. We recognize that many incidents of discrimination and hate are unreported due to fears of retaliation, gaslighting, and/or law enforcement and media apathy. We hope that what we have gathered here can serve as a foundation for further research and insight into the true scope of the issues we discuss.
-
-Moreover, we do not intend to in any capacity speak for all Asian American healthcare workers. Our story focuses on the day-in-the-life of one fictionalized individual experiencing a reality based on facts, reports, as and first-hand testimonials. In this way, the character presented is an amalgamation of many various accounts of the Asian American experience, specifically the East Asian American experience, during this pandemic. We also recognize that the term &quot;Asian American&quot; is vastly broad, and that the impacts of COVID-19 have been disproportionately manifested amongst various subgroups within the monolithic grouping &quot;Asian American.&quot; 
-
-[[Let&#39;s Begin-&gt;Intro: Awaken]]</tw-passagedata>
-
+<!-- 13 Reflection -->
 <tw-passagedata pid="19" name="13. Reflection" tags="" position="844,808" size="100,100">I’m sitting on my bed again, all ready to head to sleep. This is a time to myself; it seems that the streetlamps outside hum just for me, a lullaby. I’m thinking of all those people today. I’m numb, maybe. I’m thinking about all those codes again. Those phone calls. Last goodbyes. Who did I last see today? Who did I last talk to? Will they make it to the morning? Are they already gone?
 
 Here I am. Sitting here. Another day in this pandemic has passed. Today, lives were lost, lives were saved. I’m here, and I’m ready. Tomorrow I’ll head to the hospital, get ready, and fight the good fight. I’ll be more mindful at 7pm and listen out for that clap.
 
-We’re stronger together. And we are–no matter what, we are here and we are here to stay. The strength of NYC has always been its diversity. We’re tested, but we will emerge stronger, ever more present and aware of how and why we belong. New York tough.
+We’re stronger together. And we are–no matter what, we are here and we are here to stay. The strength of NYC has always been its diversity. We’re tested, but we will emerge stronger, ever more present and aware of how and why we belong. New York tough. Translated: 坚强的纽约 //jiān qiáng de niǔ yuē//. I&#39;ll memorize this and say it the next time I call Ma. 
 
 Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 </tw-passagedata>
 
-<!-- Passage 3.5 Daily Report Alert-->
-<tw-passagedata pid="23" name="Daily Report Alert" tags="" position="849,212" size="100,100">
+<!-- Fin.-->
+<tw-passagedata pid="15" name="Fin." tags="" position="681,801" size="100,100">Tomorrow morning you’ll see this text and smile, and I will remember to eat. I will be strong. You’ve eaten. The city sleeps, for now, and now I sleep too. 
 
-<div class="email">
-&lt;h1&gt;Subject: Daily COVID-19 Cases, New York City&lt;/h1&gt;
-&lt;button&gt;[[Open -&gt;3. Daily Report]]&lt;/button&gt;</div>
-
+[[A Message from the Authors-&gt;Final Message]]
 </tw-passagedata>
+
+<!-- Final Message -->
+<tw-passagedata pid="24" name="Final Message" tags="" position="681,951" size="100,100">
+	Thank you for joining us and living a day distilled into a progression of scenes, questions and triumphs materialized in words on your screen. For many, us included, the conflict in belonging embodied in the Asian American identity is one which loans itself to uncertainty about who we are, who we are meant to be, what we can be. This internal conflict is especially bolstered this time of societal reckoning with race and racism. We’d like to echo a sentiment which appears in the story you’ve read: we are here and we are here to stay. 
+
+	In concluding our narrative, we’d like you to take note of two points regarding what you’ve read before continuing on to a page of resources.
+
+	The body of referenced articles and resources does not represent the wealth of information regarding healthcare work during the pandemic and current anti-Asian racism in its entirety. We recognize that many incidents of Anti-Asian discrimination and hate are unreported due to fears of retaliation, gaslighting, and/or law enforcement and media apathy. We hope that what we have gathered here can serve as a foundation for further research and insight into the true scope of these issues.
+
+	We also do not intend to represent the experiences of all Asian American healthcare workers in any capacity. Our story focuses on the day-in-the-life of one fictionalized individual experiencing a reality based on reports and first-hand testimonials. In this way, the character you meet is an amalgamation of many various accounts of the Asian American experience, specifically the East Asian American experience during this pandemic. We also recognize that the term &quot;Asian American&quot; is vastly broad, and that the impacts of COVID-19 have been disproportionately manifested amongst various subgroups within the monolithic grouping &quot;Asian American.&quot; 
+
+	[[Please read through and engage with the resources we’ve provided here.-&gt;Resources Page]]
+</tw-passagedata>
+
+<!-- Resources Page -->
+<tw-passagedata pid="25" name="Resources Page" tags="" position="681,1101" size="100,100">
+	(link-repeat: &quot;To report anti-Asian hate incidents (available in multiple languages)&quot;)[(open-url: &quot;http://www.asianpacificpolicyandplanningcouncil.org/stop-aapi-hate/?fbclid=IwAR14WhI_D-8harRJKDpfbwrlZzpcS89TGBS4hDeDd1Jb415daEkMbyhbOIQ&quot;)]
+
+	(link-repeat: &quot;Petition: End Hate Crimes Against Asian Americans&quot;)[open-url:&quot;https://www.change.org/p/governor-andrew-cuomo-end-hate-crimes-against-asian-americans?fbclid=IwAR0innhzvIgMYJdmnuAwZogcEP1SjR_o0kizN1yHq3wcMTtsQmA1LPuJISg&quot;)]
+	
+	(link-repeat: &quot;About #Hateisavirus&quot;)[(open-url: &quot;https://hateisavirus.org/&quot;)]
+	
+	(link-repeat: &quot;To complete the 2020 census&quot;)[(open-url: &quot;https://2020census.gov/en.html?fbclid=IwAR11rbgBaha8HyqneG2ZvnBFqU9E7-b3IrZLx_-ibN7AFDhVGLpew67vFQE&quot;)]
+	
+	(link-repeat: &quot;Anti-Asian Violence: Know Your Rights&quot;)[(open-url: &quot;https://www.youtube.com/watch?v=6CZrC4lu8J0&amp;feature=youtu.be&amp;fbclid=IwAR2kZbPgcgeLGLeoqNUq2Q6aNx0KpecuEdoFAzQ0z_TA8mMRi2IWnebMgRs&quot;)]
+	
+	To read about incidents of anti-Asian hate and other Asian diasporic identity-related news: (link-repeat: &quot;NextShark&quot;)[(open-url: &quot;https://nextshark.com/&quot;)] and (link-repeat: &quot;AsAm News&quot;)[(open-url: &quot;https://asamnews.com/&quot;)]
+	
+	Support Chinatown: (link-repeat: &quot;Welcome to Chinatown&quot;)[(open-url: &quot;https://www.welcometochinatown.com/&quot;)] and (link-repeat: &quot;Heart of Dinner&quot;)[(open-url: &quot;campsite.bio/heartofdinner&quot;)]
+	
+	Local groups that have taken action in response to the surge in anti-Asian hate:
+	(link-repeat: &quot;Concerned AsAm Citizens of NYC&quot;)[(open-url: &quot;https://www.facebook.com/CAACNYC/&quot;)]
+	(link-repeat: &quot;The Guardian Angels&quot;)[(open-url: &quot;http://guardianangels.org/&quot;)]
+	(link-repeat: &quot;Article on the Guardian Angels&quot;)[(open-url: &quot;https://asamnews.com/2020/07/15/chinese-american-recruits-join-guardian-angels-as-group-expands-into-chinatown/?fbclid=IwAR39uGHZ5LOFI9g7ER4e9UFGKHhad55mVjerAS_KKH_ZLNadonffXtqlzDc&quot;)]
+	(link-repeat: &quot;NYC-Based Asian American Organizations&quot;)[(open-url: &quot;http://www.awib.org/index.cfm?fuseaction=page.viewPage&amp;pageID=859&amp;nodeID=1&quot;)]	
+	(link-repeat: &quot;Asian American Advocacy Groups Around the United States&quot;)[(open-url: &quot;http://www.awib.org/index.cfm?fuseaction=page.viewpage&amp;pageid=816&quot;)]
+</tw-passagedata>
+
 </tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
