updated Sally story
-adds newest story draft, updates countdown a little.

--- a/countdown.html
+++ b/countdown.html
@@ -12,14 +12,15 @@
 
 <body>
     
-    <h1>09.18.20</h1>
+    <h1>091820</h1>
+    <h1>What IF?</h1>
     
     <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Sept 18, 2020 24:00:00").getTime();
+var countDownDate = new Date("Sept 18, 2020 10:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
