--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ name="jsbutton2" src="images/unclicked.svg" width="42" height="42" border="0"
 alt="javascript button" class="img-fluid" id="story2"></a></u></p><span class="popuptext" id="myPopup2"><span class="close">&times;</span>
             <h1>Digital Sex Crimes in South Korea</h1>
             <p>This is story number three. It's awesome. (Should be over South Korea. This placement might be tricky)<br>
-          <a href="SallyLaurenDraft2.html" class="enterButton">enter</a>
+          <a href="SLStoryDraft4.html" class="enterButton">enter</a>
             </p>
           </span></div> 
 
