--- a/doubledfront.html
+++ b/doubledfront.html
@@ -10,6 +10,8 @@
         <meta name="description" content="A Doubled Font">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="doubled.css">
+        <!-- Logo link -->
+        <link rel="shortcut icon" href="images/white-logo.svg"/>
     </head>
     <body id="story-body">
 
