link properly to credits

--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -84,15 +84,12 @@ open-url:visited
 
 <!-- Preface -->
 <tw-passagedata pid="16" name="Preface" tags="" position="0,43" size="100,100">
-	//Disclaimer: Before reading, please be aware that the story will heavily feature anxieties regarding racism, discrimination, identity, and death. There will be links provided throughout to articles and resources related to our content.//
+	//Please be aware that this narrative features anxieties regarding racism, discrimination, identity, and death. Links are provided throughout to articles and resources related to our content.//
 
-	Our narrative does not take place on a specified date during the pandemic. Readers will find that referenced statistics and reported events span a months-long time frame encompassing the height of the pandemic in NYC. This was done to holistically communicate a complex reality supported by evidence which is recorded/publicized at a pace not reflective of lived experience. This narrative follows a day in the life of a registered nurse living and working in NYC who identifies as Asian American.
-	
-	While there are moments throughout the plot that are directly hyperlinked to relevant articles and sources, in no way does the body of provided resources in its entirety represent the wealth of information regarding the pandemic and anti-Asian racism fuelled by the pandemic. We recognize that many incidents of discrimination and hate are unreported due to fears of retaliation, gaslighting, and/or law enforcement and media apathy. We hope that what we have gathered here can serve as a foundation for further research and insight into the true scope of the issues we discuss.
-	
-	Moreover, we do not intend to in any capacity speak for all Asian American healthcare workers. Our story focuses on the day-in-the-life of one fictionalized individual experiencing a reality based on facts, reports, as and first-hand testimonials. In this way, the character presented is an amalgamation of many various accounts of the Asian American experience, specifically the East Asian American experience, during this pandemic. We also recognize that the term &quot;Asian American&quot; is vastly broad, and that the impacts of COVID-19 have been disproportionately manifested amongst various subgroups within the monolithic grouping &quot;Asian American.&quot; 
-	
-	[[Let&#39;s Begin-&gt;Intro: Awaken]]
+	<b>(align: "=><=")[A Note to the Reader]</b>
+	This day-in-the-life does not take place on a specified date during the pandemic. Referenced statistics and incidents span a months-long time frame encompassing the height of the pandemic in NYC. This is done to holistically communicate a complex reality documented by evidence recorded and publicized at a pace not reflective of lived experience.
+
+	[[Now, let’s begin.-&gt;Intro: Awaken]]
 </tw-passagedata>
 
 <!-- Passage 0 Intro: Awaken-->
@@ -123,7 +120,11 @@ open-url:visited
   <div class="wechat-hidden"> 
   It isn’t so easy to get to you anymore. Have you eaten? Ma, why stay up so late? 
   
-  对不起 //duì bù qĭ//, I’m sorry. This’ll be left read at 5:04AM (and unreplied, for now)—I’m putting my phone down, my eyes are stinging that slow burn of fatigue. I did, Ma, I promise, but sometime real late last night and I’m not so hungry this morning. But these twelve hour shifts: I need to eat something.
+  对不起 
+  //duì bù qĭ// 
+   I’m sorry. 
+   
+   This’ll be left read at 5:04AM (and unreplied, for now)—I’m putting my phone down, my eyes are stinging that slow burn of fatigue. I did, Ma, I promise, but sometime real late last night and I’m not so hungry this morning. But these twelve hour shifts: I need to eat something.
   
   Glasses. Where are [[my glasses?-&gt;1. Stretching]]</div>
   
@@ -171,23 +172,25 @@ The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasse
 
 The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasses can only do so much now. &#39;&#39;Let&#39;s outdo the sun.&#39;&#39;
 
-I’m on the edge of the bed now, straightening out my limbs and snow-angeling the bed. Did these sheets feel this soft last night? My feet are killing me. These half-days in the hospital—all on feet. On edge. I’ll do a little stretching, paddling the air with the heels of my feet, before getting (link-repeat: &quot;ready.&quot;)[(show: ?num)]
+I’m on the edge of the bed now, straightening out my limbs and snow-angeling the mattress. Did these sheets feel this soft last night? My feet are killing me. These half-days in the hospital—all on feet. On edge. I’ll do a little stretching, paddling the air with the heels of my feet, before getting (link-repeat: &quot;ready.&quot;)[(show: ?num)]
 
 |num)[&lt;div id=&quot;count&quot;&gt;(live:1s)[1  (stop:)] (live:2s)[2  (stop:)] (live:3s)[3  (stop:)] (live:4s) [4  (stop:)] (live:5s)[[[5... -&gt;1.1 Meditation]](stop:)]&lt;/div&gt;]
 </tw-passagedata>
 
 <!-- 1.1 Meditation-->
-<tw-passagedata pid="17" name="1.1 Meditation" tags="" position="530,215" size="100,100">As I stretch, I am suddenly conscious of my breath, the inhale, pause, exhale. I’m meditating, I realize, and I savor it. These moments before the chaos of the day—remembering myself, feeling.
+<tw-passagedata pid="17" name="1.1 Meditation" tags="" position="530,215" size="100,100">
+	As I stretch, I am suddenly conscious of my breath, the inhale, pause, exhale. I’m meditating, I realize, and I savor it. These moments before the chaos of the day—remembering myself, feeling.
 
-So, so much loss. For a moment, the calls of Code 3s ring. They ring in my ears, in my head. They become time, marking every half hour or so: death tracks my day. And as I left for the day yesterday, there were still dozens of patients waiting for a bed on the floor; waiting, getting sicker. Sickness. How do I feel today? Do I have any symptoms? I need to check, hold myself accountable. If I become infected, I put countless others at risk, my patients included. And how are my colleagues? Are they still alright?
+	So, so much loss. For a moment, the calls of Code 3s ring. They ring in my ears, in my head. They //become// time, marking every half hour or so: death tracks my day. 
 
-The risk is ever-present. The risk is made worse by these shortages—of PPE, of tests, ventilators... This risk is a sacrifice I need to make.
+	Breathe. This isn't really meditating, is it? I'm supposed to be thoughtless, at peace, or something like that. Okay. At peace...
 
-But for now, it&#39;s just me. It&#39;s quiet. I’m stretching out and reminding myself of this place I occupy, this body I inherit, and I am grateful for it. I want to be there to care for my patients, so I make sure I am ready to do so.
+	For now, it’s just me. It is quiet. I’m stretching out and reminding me of this place I occupy, this body I inherit, and I am grateful for it. I want to be there to care for my patients, so I make sure I’m ready to do so.
 
-And what this means is that right now I make a promise. I promise to provide the care that my patients deserve. Maybe this means that I have to restrain myself, lessen the emotional connection I feel with each of them. For the sake of efficiency, for the sake of being the best medical professional I can be, I must distance myself from all that loss, even the possibility of it. 
+	And what this means is that right now I make a promise. I promise to provide the care that my patients deserve. Maybe this means that I have to restrain myself, lessen the emotional connection I feel with each of them. For the sake of efficiency, for the sake of being the best professional I can be, I must distance myself from all that loss, even the possibility of it. 
+	Breathe in. Breathe out.
 
-Breathe in. Breathe out. [[Promise.-&gt;2. Groceries]]
+	[[Promise.-&gt;2. Groceries]]
 </tw-passagedata>
 
 <!-- Passage 2 Groceries-->
@@ -296,7 +299,7 @@ Mask-on (link-repeat: &quot;(the right way, of course):&quot;)[(open-url: &#39;h
 
 It’s a stubborn kind of brisk out today. The foggy warmth from the mask (I usually despise it) is comforting. It’s a reminder, really, that I am here, that I am breathing. Thank God.
 
-And it’s a lonely walk today, as with most days. It’s too early, and it seems the city has broken its oath: it actually can sleep. I hope it knows me, that my footsteps, though muted—I feel like footsteps are quieter this early in the morning, no?—match a rhythm, a rhythm of redemption, of goodness, that I know the city has always beat. 
+And it’s a lonely walk today, as with most days. It’s too early, and it seems the city has broken its oath: it actually can sleep. I hope it knows me, that my footsteps, though muted—I feel like footsteps are quieter this early in the morning, no?—match a rhythm, a rhythm of redemption, of goodness, that I know the city has always beat.  
 
 It’s a loving place, yes. I can’t wait for the 7pm applause today. To feel: I am doing something, I am here to help, let me help you. Yesterday, a patient finally came off of the ventilators. God bless. I prayed with a woman who didn’t speak much English, who held her hands together so tight I saw a rekindled strength. God bless. 
 
@@ -534,7 +537,13 @@ The journey there would be too much, [[anyway.-&gt;13. Reflection]]
 
 Here I am. Sitting here. Another day in this pandemic has passed. Today, lives were lost, lives were saved. I’m here, and I’m ready. Tomorrow I’ll head to the hospital, get ready, and fight the good fight. I’ll be more mindful at 7pm and listen out for that clap.
 
-We’re stronger together. And we are–no matter what, we are here and we are here to stay. The strength of NYC has always been its diversity. We’re tested, but we will emerge stronger, ever more present and aware of how and why we belong. New York tough. Translated: 坚强的纽约 //jiān qiáng de niǔ yuē//. I&#39;ll memorize this and say it the next time I call Ma. 
+We’re stronger together. And we are–no matter what, we are here and we are here to stay. The strength of NYC has always been its diversity. We’re tested, but we will emerge stronger, ever more present and aware of how and why we belong. 
+
+New York tough. 
+坚强的纽约 
+//jiān qiáng de niǔ yuē//. 
+
+I&#39;ll memorize this and say it the next time I call Ma. 
 
 Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 </tw-passagedata>
@@ -583,6 +592,10 @@ Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 	(link-repeat: &quot;Article on the Guardian Angels&quot;)[(open-url: &quot;https://asamnews.com/2020/07/15/chinese-american-recruits-join-guardian-angels-as-group-expands-into-chinatown/?fbclid=IwAR39uGHZ5LOFI9g7ER4e9UFGKHhad55mVjerAS_KKH_ZLNadonffXtqlzDc&quot;)]
 	(link-repeat: &quot;NYC-Based Asian American Organizations&quot;)[(open-url: &quot;http://www.awib.org/index.cfm?fuseaction=page.viewPage&amp;pageID=859&amp;nodeID=1&quot;)]	
 	(link-repeat: &quot;Asian American Advocacy Groups Around the United States&quot;)[(open-url: &quot;http://www.awib.org/index.cfm?fuseaction=page.viewpage&amp;pageid=816&quot;)]
+
+
+
+	(align:"=><=")[<a class="end" href="credits.html">Fin.</a>]
 </tw-passagedata>
 
 </tw-storydata>
