--- a/countdown.html
+++ b/countdown.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
 
   <title>091820</title>
-  <meta name="description" content="09.18.20">
+  <meta name="description" content="091820">
+    <!-- Logo link -->
+        <link rel="shortcut icon" href="images/white-logo.svg"/>
 
   <link rel="stylesheet" href="countdown.css">
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
